RANGER-5198 : Prevent selected long string values from getting truncated in the react-select control

--- a/security-admin/src/main/webapp/react-webapp/src/styles/style.css
+++ b/security-admin/src/main/webapp/react-webapp/src/styles/style.css
@@ -713,10 +713,6 @@ header {
   background-color: #e4e4e4;
   margin: 3px 3px;
   float: left;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  max-width: 200px;
 }
 
 .formHeader {
